[project]
name = "mortgage-calculator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "nbformat>=5.10.4",
    "openpyxl>=3.1.5",
    "plotly>=6.1.2",
    "seaborn>=0.13.2",
    "streamlit>=1.46.0",
]
